KOGITO-8245: New Public API Data Model     - Adds the dynamic shecules loading and modifications on the openapi document generaion     - Adds the job.create and job.delete events
