# src/main/java/org/kie/kogito/jobs/service/api/Descriptor.java
@@ -14,21 +14,7 @@
  * limitations under the License.
  */
 
-package org.kie.kogito.jobs.service.api.http;
+package org.kie.kogito.jobs.service.api;
 
-import org.kie.kogito.jobs.service.api.RecipientDescriptor;
-
-public class HttpRecipientDescriptor implements RecipientDescriptor<HttpRecipient> {
-
-    public static final String NAME = "http";
-
-    @Override
-    public String getName() {
-        return NAME;
-    }
-
-    @Override
-    public Class<HttpRecipient> getType() {
-        return HttpRecipient.class;
-    }
+public interface Descriptor {
 }
