# src/main/java/org/kie/kogito/jobs/service/api/event/serialization/SerializationException.java
@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 Red Hat, Inc. and/or its affiliates.
+ * Copyright 2021 Red Hat, Inc. and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,13 +13,15 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+package org.kie.kogito.jobs.service.api.event.serialization;
 
-package org.kie.kogito.jobs.service.api;
+public class SerializationException extends RuntimeException {
 
-public enum TemporalUnit {
-    MILLIS,
-    SECONDS,
-    MINUTES,
-    HOURS,
-    DAYS
+    public SerializationException(String message) {
+        super(message);
+    }
+
+    public SerializationException(String message, Throwable cause) {
+        super(message, cause);
+    }
 }
